removed wrong compiler args